# robotics

p1/ex01/: commands.txt
p2/: script
p2/ex01/: .zshrc  ex01.txt
p2/ex02/: package_path_ros2topic.txt
p2/ex03/andrey/: package.xml  setup.cfg  setup.py
p2/ex04/: colcon_build_ex04.txt
p2/ex05/: rosnode_list.txt
p2/ex06/: cmd_vel.txt
p2/ex07/: parameter_server.txt  rosservice_list.txt
p2/ex08/: rqt_console.txt.csv  three_turtles.launch
p2/ex09/my_pkgxw/: CMakeLists.txt  package.xml  setup.cfg  setup.py
p2/ex09/my_pkgxw/srv/: .FullNameSumService.srv.swp
p2/ex10/text_to_cmd_vel/: package.xml  setup.py
p2/ex10/text_to_cmd_vel/text_to_cmd_vel/: text_to_cmd_vel_node.py
p3/: script
p3/ex01/fullname_interfaces/: CMakeLists.txt  package.xml
p3/ex01/fullname_interfaces/srv/: SummFullName.srv
p3/ex01/service_full_name/: package.xml  setup.py
p3/ex01/service_full_name/service_full_name/: client_name.py  service_name.py
p3/ex02/: pose_speed_x1.yaml
p3/ex02/turtle_cmd_vel/: metadata.yaml  turtle_cmd_vel.mcap
p3/ex03/: doctor.txt
p3/ex04/move_to_goal/: package.xml  setup.py
p3/ex04/move_to_goal/move_to_goal/: move_to_goal.py
p3/ex05/action_cleaning_robot/: CMakeLists.txt  package.xml  setup.cfg  setup.py
p3/ex05/action_cleaning_robot/action/: CleaningTask.action
p3/ex05/action_cleaning_robot/action_cleaning_robot/: cleaning_action_client.py  cleaning_action_server.py
p3/ex05/action_cleaning_robot_interfaces/: CMakeLists.txt  package.xml
p3/ex05/action_cleaning_robot_interfaces/action/: CleaningTask.action
p4/: script
p4/ex01/: frames.pdf.gv  transform.txt
p4/ex02/tf22/: package.xml  setup.cfg  setup.py
p4/ex02/tf22/launch/: carrot_tf2_demo.launch.py
p4/ex02/tf22/rviz/: carrot.rviz
p4/ex02/tf22/tf22/: carrot_broadcaster.py  turtle_broadcaster.py  turtle_listener.py
p4/ex02b/tf2b/: package.xml  setup.cfg  setup.py
p4/ex02b/tf2b/launch/: multi_target_demo.launch.py
p4/ex02b/tf2b/tf2b/: target_switcher.py  turtle_broadcaster.py  turtle_controller.py
p4/ex03/tf33/: package.xml  setup.cfg  setup.py
p4/ex03/tf33/launch/: time_travel.launch.py
p4/ex03/tf33/tf33/: turtle1_broadcaster.py  turtle2_broadcaster.py  turtle_time_follower.py
p5/: script
p5/ex01/robot/: package.xml  setup.py
p5/ex02/robot/: setup.py
p5/ex02/robot/launch/: robot_display.launch.py
p5/ex03/robot3/urdf/: robot.xacro
p5/ex04/robot3/config/: robot_bridge.yaml
p5/ex04/unicmove/: CMakeLists.txt  package.xml  setup.py
p5/ex04/unicmove/launch/: circle_movement.launch.py
p5/ex04/unicmove/unicmove/: circle_movement.py
p5/ex05/robot3/: package.xml
p5/ex05/robot3l/launch/: robot_display.launch.py
p5/ex05/robot3l/urdf/: robot.xacro
p5/ex05/unicmove/: setup.cfg
p5/ex05/unicmove/unicmove/: circle_movement.py
p6/: script
p6/ex01/robot3l/: setup.py
p6/ex01/robot3l/config/: robot_bridge.yaml
p6/ex01/robot3l/launch/: robot_display.launch.py
p6/ex01/robot3l/urdf/: robot.xacro
p6/ex02/robot3/: CMakeLists.txt  setup.py
p6/ex02/robot3/launch/: robot_display.launch.py
p6/ex02/robot3/urdf/: robot.gazebo.xacro  robot.xacro
p6/ex02/robot3d/: package.xml  setup.cfg  setup.py
p6/ex02/robot3d/launch/: robot_display.launch.py
p6/ex02/robot3d/robot3d/: pointcloud_to_depth_image.py
p6/ex02/robot3d/rviz/: urdf_config.rviz
p6/ex02/robot3d/urdf/: robot.xacro
p6/ex02/robot3l/: CMakeLists.txt  package.xml
p6/ex02/robot3l/config/: robot_bridge.yaml
p6/ex03/robot3l/: package.xml  setup.py
p6/ex03/robot3l/config/: robot_bridge.yaml
p6/ex03/robot3l/launch/: robot_display.launch.py
p6/ex03/robot3l/rviz/: urdf_config.rviz
p6/ex03/robot3l/urdf/: robot.xacro  robot_imu.gazebo  robot_imu.gazebo.xacro
p6/ex03/robot3l/worlds/: imu_world.sdf
p6/ex05/robot3d/: setup.py
p6/ex05/robot3d/launch/: robot_display.launch.py
p6/ex05/robot3d/robot3d/: lidar_to_3d_pointcloud.py  pointcloud_to_depth_image.py  stop_on_depth.py
p6/ex05/robot3d/urdf/: robot.xacro
ubuntu/: docker-compose.yml  script
