<?xml version="1.0"?>
<package format="3">
  <name>service_full_name</name>
  <version>0.0.0</version>
  <description>Full Name Concat: service + client</description>
  <maintainer email="alexgrihalex@gmail.com">grenka</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>setuptools</build_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>fullname_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

