<?xml version="1.0"?>
<package format="3">
  <name>action_cleaning_robot</name>
  <version>0.0.1</version>
  <description>ROS2 package for cleaning turtle via Actions</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- Buildtool -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>rclpy</build_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <!-- Run dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Export -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>